--- a/src/app/(mainsite)/components/homepage/AboutUs/aboutus.module.css
+++ b/src/app/(mainsite)/components/homepage/AboutUs/aboutus.module.css
@@ -10,7 +10,7 @@
 
 .imgWrapper{
     position: relative;
-    transform: rotate(-2deg);
+    /* transform: rotate(-2deg); */
 }
 
 .imgWrapper::after{
