--- a/src/app/(mainsite)/components/misc/Navbar/navbar.module.css
+++ b/src/app/(mainsite)/components/misc/Navbar/navbar.module.css
@@ -323,7 +323,7 @@
     
     .links span{
         padding-left: 0.2vw;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
     }
     
     .navLink li, .dropdownLink, .cta{
@@ -332,7 +332,7 @@
     }
     .links{
         position: absolute;
-        width: 20%;
+        width: 30%;
         right: 0;
         top: 100%;
         padding: 2vw;
@@ -350,7 +350,8 @@
         display: block;
         transition: color 0.3s;
         cursor: pointer;
-        padding: 1.5vw 0;
+        padding: 1.8vw 0;
+        
         border-bottom: 1px solid rgba(0,0,0,0.1);
     }
     
@@ -445,11 +446,15 @@
         height: 5vw;
     }
     .links{
-        width: 30%;
+        width: 90%;
+        padding-left: 10%;
     }
     .links svg{
         width: 5vw;
         height: 5vw;
+    }
+    .navLink.active::after{
+        width: 10%;
     }
 
     .topBar{
@@ -462,16 +467,16 @@
         margin-right: 1vw;
     }
     .topBarLinks a{
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         padding: 0 2vw;
     }
 
-    .topBarLinks a:nth-child(1){
+    /* .topBarLinks a:nth-child(1){
         display: none;
-    }
+    } */
     .topBarLinks a:nth-child(2){
-        border: none !important;
-        padding-left: 0;
+        /* border: none !important; */
+        /* padding-left: 0; */
     }
     
     .links span{
@@ -487,7 +492,7 @@
         transition: color 0.3s;
         cursor: pointer;
         padding: 2.5vw 0;
-        font-size: 1.2rem;
+        font-size: 1.3rem;
         border-bottom: 1px solid rgba(0,0,0,0.1);
     }
     
