--- a/src/app/(mainsite)/components/misc/Navbar/navbar.module.css
+++ b/src/app/(mainsite)/components/misc/Navbar/navbar.module.css
@@ -5,7 +5,7 @@
     width: 100%;
     background-color: var(--secondary-color);
     z-index: 998;
-    /* box-shadow: 0px 2px 4px rgba(0,0,0,0.3); */
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
     transition: 0.5s transform;
     
 }
