--- a/src/app/(mainsite)/components/contactpage/FreeEstimateForm/freeestimateform.css
+++ b/src/app/(mainsite)/components/contactpage/FreeEstimateForm/freeestimateform.css
@@ -26,9 +26,18 @@
     position: relative;
     margin: 1.5vw 0.5vw;
 }
-.input-wrapper:has(.half-input){
+.input-wrapper:has(.half-input), .input-wrapper:has(.date-input){
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+.input-wrapper .date-input{
+    width: 50% !important;
+    padding-right: 2% !important;
+}
+.date-input-label{
+    font-size: 1.2rem;
+    font-weight: 500;
 }
 #formPhoneIcon:not(.company-name-icon){
     top: 0%;
