--- a/src/app/(mainsite)/components/contactpage/FreeEstimateForm/freeestimateform.css
+++ b/src/app/(mainsite)/components/contactpage/FreeEstimateForm/freeestimateform.css
@@ -165,6 +165,11 @@
  
 /* MOBILE STYLES */
 @media only screen and (max-width: 649px){
+    input::-webkit-date-and-time-value{ padding: 3vw 0; }
+    .input-wrapper .date-input{
+        display: inline-flex;
+        align-items: center;
+    }
     .form-disclaimer{
         padding: 3vw 3.5vw 0 3.5vw;
 
