--- a/src/app/(mainsite)/components/servicespage/Services/ServiceItem/serviceitem.module.css
+++ b/src/app/(mainsite)/components/servicespage/Services/ServiceItem/serviceitem.module.css
@@ -75,6 +75,7 @@
     .serviceItem{
         width: 80%;
         padding: 4%;
+        padding-bottom: 12%;
         margin: 4vw 6%;
     }
     .icon svg{
