--- a/src/app/(mainsite)/components/contactpage/ContactInfo/contactinfo.module.css
+++ b/src/app/(mainsite)/components/contactpage/ContactInfo/contactinfo.module.css
@@ -88,6 +88,7 @@
     .contactInfo{
         flex-direction: column;
         align-items: center;
+        gap: 10vw;
     }
     
     .formWrapper{
